[gd_scene load_steps=23 format=3 uid="uid://btmtdc7t0r0ru"]

[ext_resource type="Script" path="res://src/Items/Balls/NewBall.gd" id="1_cfj1x"]
[ext_resource type="Material" uid="uid://dk0f4vjr0y0q3" path="res://assets/shader/material/contour_shadermaterial.tres" id="2_ftmrn"]
[ext_resource type="Texture2D" uid="uid://cd7mx6yijog8j" path="res://assets/art/ball/ball_test.png" id="3_8bc2e"]
[ext_resource type="Texture2D" uid="uid://dhu7eccs5egsg" path="res://assets/art/ball/ball_selection.png" id="4_upaoj"]
[ext_resource type="Script" path="res://src/Items/Balls/Highlighter.gd" id="5_s0asj"]
[ext_resource type="Script" path="res://src/Items/Balls/BallEffectsHandler.gd" id="6_gso6j"]
[ext_resource type="PackedScene" path="res://src/Effects/DustParticle.tscn" id="7_g60ov"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ebura"]
friction = 0.2
bounce = 0.7

[sub_resource type="CircleShape2D" id="1"]
resource_local_to_scene = true
radius = 6.0

[sub_resource type="CircleShape2D" id="2"]
radius = 16.0

[sub_resource type="Animation" id="Animation_yhsxj"]
resource_name = "destruction"
length = 0.9
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effects/Destruction")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effects/Destruction:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_queue_free"
}]
}

[sub_resource type="Animation" id="Animation_jb6dc"]
length = 1.5
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effects/Reconstruction")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effects/Reconstruction:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Effects/DunkParticles")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Effects/DunkParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1.25, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yfq11"]
_data = {
"destruction": SubResource("Animation_yhsxj"),
"dunk": SubResource("Animation_jb6dc")
}

[sub_resource type="CompressedTexture2D" id="5"]

[sub_resource type="Curve" id="6"]
_data = [Vector2(0, 0.0886364), 0.0, 0.215584, 0, 0, Vector2(0.554217, 0.952273), 0.425641, 0.425641, 0, 0, Vector2(1, 1), -0.570101, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="7"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.00699301, 0.244755, 0.468531, 0.839161, 1)
colors = PackedColorArray(1, 0, 0.580392, 0, 0, 0, 0, 0.258741, 0.535156, 0.535156, 0.535156, 0.705882, 0.839844, 0.839844, 0.839844, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CompressedTexture2D" id="8"]

[sub_resource type="Curve" id="9"]
_data = [Vector2(0, 1), 0.0, 0.215584, 0, 0, Vector2(0.786325, 1), -1.57233, -1.57233, 0, 0, Vector2(1, 0.4), -2.73506, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="10"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.020202, 0.131313, 0.50505, 0.808081, 1)
colors = PackedColorArray(1, 0, 0.580392, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0.839844, 0.839844, 0.839844, 1, 0.533333, 0.533333, 0.533333, 0.705882, 0, 0, 0, 0.258824)

[sub_resource type="CompressedTexture2D" id="11"]

[sub_resource type="Curve" id="12"]
_data = [Vector2(0, 0.784091), 0.0, 3.55714, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="13"]
offsets = PackedFloat32Array(0.020979, 0.27972, 0.75, 1)
colors = PackedColorArray(1, 0.954956, 0.859375, 0, 0.820312, 0.799805, 0.78186, 1, 0.538086, 0.369934, 0.475029, 0.34, 0.129412, 0.0705882, 0.172549, 0)

[node name="NewBall" type="RigidBody2D"]
light_mask = 4
z_index = 110
z_as_relative = false
collision_layer = 260
collision_mask = 1030
input_pickable = true
mass = 1.2
physics_material_override = SubResource("PhysicsMaterial_ebura")
max_contacts_reported = 4
contact_monitor = true
script = ExtResource("1_cfj1x")
impact_threshold = 250.0

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 4
material = ExtResource("2_ftmrn")
texture = ExtResource("3_8bc2e")

[node name="Sprite_Selection" type="Sprite2D" parent="Sprite2D"]
visible = false
modulate = Color(0.980392, 0.803922, 0.498039, 1)
texture = ExtResource("4_upaoj")

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("1")

[node name="Highlighter" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("5_s0asj")
selection_color = Color(1, 1, 0.9, 0.9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Highlighter"]
visible = false
shape = SubResource("2")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yfq11")
}

[node name="Effects" type="Node2D" parent="."]
script = ExtResource("6_gso6j")
col1 = Color(0.866667, 0.866667, 0.866667, 1)
col2 = Color(0.505882, 0.517647, 0.521569, 1)
col3 = Color(0.317647, 0.333333, 0.345098, 1)

[node name="Reconstruction" type="CPUParticles2D" parent="Effects"]
emitting = false
amount = 24
lifetime = 0.85
one_shot = true
speed_scale = 1.5
explosiveness = 0.61
lifetime_randomness = 0.29
fract_delta = false
texture = SubResource("5")
emission_shape = 3
emission_rect_extents = Vector2(1, 1)
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("6")
color_ramp = SubResource("7")

[node name="Destruction" type="CPUParticles2D" parent="Effects"]
emitting = false
amount = 24
lifetime = 1.2
one_shot = true
speed_scale = 1.4
explosiveness = 0.8
lifetime_randomness = 0.29
fract_delta = false
texture = SubResource("8")
emission_shape = 3
emission_rect_extents = Vector2(1, 1)
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("9")
color_ramp = SubResource("10")

[node name="DunkParticles" type="CPUParticles2D" parent="Effects"]
z_index = 99
z_as_relative = false
position = Vector2(0, -3.8147e-06)
emitting = false
amount = 50
one_shot = true
explosiveness = 0.7
randomness = 0.05
lifetime_randomness = 0.29
fract_delta = false
texture = SubResource("11")
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, -100)
scale_amount_curve = SubResource("12")
color_ramp = SubResource("13")

[node name="DustParticle" parent="Effects" instance=ExtResource("7_g60ov")]
z_index = -1
amount = 10

[connection signal="mouse_entered" from="Highlighter" to="Highlighter" method="_on_Selector_mouse_entered"]
[connection signal="mouse_exited" from="Highlighter" to="Highlighter" method="_on_Selector_mouse_exited"]
